<resources>
    <string name="app_name">Hillfair2k22</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button">Button</string>
    <string name="bottom_nav_events_and_workshop">Events and Workshops</string>


    <!-- user_feed resources-->
    <style name="caption_goe">
        <item name="android:textSize">14sp</item>
        <item name="android:textColor">#000000</item>
    </style>

    <string name="name">Name</string>
    <string name="roll_no">Roll No.</string>
    <string name="phone_no">Phone No.</string>
    <string name="instagram_id">Instagram Id</string>
    <string name="save">Save</string>
    <string name="todo">TODO</string>
    <string name="enter_your_email_linked_to_your_account">Enter Your Email Linked to Your Account.</string>
    <string name="email">Email</string>
    <string name="next">Next</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="forget_passward">Forget Passward?</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_accout_sign_up_here">Don\'t have an accout? Sign up here</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="re_enter_your_password">Re-Enter Your Password</string>


    <string name="event_name">Treasure hunt event </string>
    <string name="club_name">English Club</string>

    <!--user feed resources-->
    <string name="user_profile_image">User profile image</string>
<!--    <string name="user_name">user_name</string>-->
<!--    <string name="more_option">more option</string>-->
<!--    <string name="user_post">user post</string>-->
<!--    <string name="caption_goes_here">Caption Goes Here</string>-->
    <string name="comments_button_icon">comments button icon</string>
    <string name="like_button_icon">like button icon</string>
    <string name="button_to_add_post">button to add post</string>
    <string name="username">Username</string>
    <string name="comments">Comments</string>
    <string name="back_button">back button</string>
    <string name="user_profile_picture">user profile picture</string>
    <string name="captions">Captions</string>
    <string name="add_picture_placeholder">add picture placeholder</string>
    <string name="post_user_feed_button">post user feed button</string>
<!--    <string name="user_profile_picture">user profile picture</string>-->
    <string name="user_name">user_name</string>
    <string name="write_your_comment">Write your comment</string>
    <string name="comment_post_button">comment post button</string>
    <string name="more_option">more option</string>
    <string name="user_post">user post</string>
    <string name="comments_button">comments button</string>
    <string name="caption_goes_here">Caption Goes Here</string>
    <string name="like_button">like button</string>
    <string name="team_name">Team Name</string>
    <integer name="score">100</integer>
    <string name="designation">Member</string>

    // bottom nav
    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_quiz">Quiz</string>
    <string name="bottom_nav_events_and_workshops">Events</string>
    <string name="bottom_nav_blind_date">Blind Date</string>
    <string name="bottom_nav_profile">Profile</string>

<!--    <string name="event_name">Treasure hunt event </string>-->
<!--    <string name="club_name">English Club</string>-->
    <string name="Event_workshop_details">Title of Workshop</string>
    <string name="Description">Description</string>
    <string name="Register">Register</string>
    <string name="TODO">TODO</string>
    <string name="Sponsors">Sponsors</string>
    <string name="sponsors">Sponsors</string>

    <string name="April">April</string>
    <string name="Quiz">Quiz</string>
    <string name="Name_leaderboard">Name</string>
    <string name="Leaderboard">Leaderboard</string>
    <string name="_100">100</string>
    <string name="_1000">1000</string>
    <string name="option_A">A.</string>
    <string name="option_B">B.</string>
    <string name="option_C">C.</string>
    <string name="option_D">D.</string>
    <string name="Correct">Correct</string>
    <string name="Incorrect">Incorrect</string>
    <string name="question">Question:</string>
    <string name="Next_Submit">Next/Submit</string>

    <string name="send">Send</string>
    <string name="display">Enter your display name</string>
    <string name="message">Message</string>
    <string name="Hii">Hii</string>

    <string name="delete_chat">Delete Chat</string>
    <string name="profile">Profile</string>
    <string name="Recent_Chats">Recent Chats</string>
</resources>