<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:title="@string/bottom_nav_home"
        android:icon="@drawable/home"/>
    <item
        android:id="@+id/quizzes"
        android:title="@string/bottom_nav_quiz"
        android:icon="@drawable/quizzes"/>
    <item
        android:id="@+id/events_and_workshops"
        android:title="@string/bottom_nav_events_and_workshop"
        android:icon="@drawable/events_workshops"/>
    <item
        android:id="@+id/blind_date"
        android:title="@string/bottom_nav_blind_date"
        android:icon="@drawable/blind_date"/>
    <item
        android:id="@+id/profile"
        android:title="@string/bottom_nav_profile"
        android:icon="@drawable/profile"/>
</menu>