<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item app:showAsAction="always"
        android:icon="@drawable/three_dots_btn"
        android:title="">

        <menu>
            <item
                android:title="@string/delete_chat"
                android:icon="@drawable/ic_baseline_delete_24"
                app:showAsAction="never"/>

            <item
                android:title="@string/profile"
                android:icon="@drawable/ic_baseline_supervised_user_circle_24"
                app:showAsAction="never"/>

            <item
                android:title="@string/Recent_Chats"
                android:icon="@drawable/ic_baseline_chat_24"
                app:showAsAction="never"/>


        </menu>

    </item>

</menu>