<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
 android:background="@color/background_color"
tools:context=".screens.account.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/ic_frame_81"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_group_37"
        android:contentDescription="@string/todo" />

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/layout_padding_left"
        android:layout_marginTop="20dp"
        android:paddingEnd="@dimen/layout_padding_right"
        android:layout_marginBottom="50dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="316dp"
            android:layout_height="53dp"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:paddingStart="@dimen/et_padding_left"
            android:paddingTop="@dimen/et_padding_top"
            android:paddingEnd="@dimen/et_padding_right"
            android:paddingBottom="@dimen/et_padding_bottom"
            android:layout_gravity="center"
            android:textColor="@color/et_text_color"
            android:textAlignment="center"
            android:textSize="20sp"
            android:background="@drawable/custom_text"/>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="316dp"
            android:layout_height="53dp"
            android:gravity="center"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:paddingStart="@dimen/et_padding_left"
            android:paddingTop="@dimen/et_padding_top"
            android:paddingEnd="@dimen/et_padding_right"
            android:paddingBottom="@dimen/et_padding_bottom"
            android:layout_gravity="center"
            android:textColor="@color/et_text_color"
            android:textAlignment="center"
            android:textSize="20sp"
            android:background="@drawable/custom_text"/>


        <TextView
            android:id="@+id/textView"
            android:layout_width="316dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/forget_passward"
            android:textStyle="bold"
            android:textColor="@color/et_text_color"
            android:layout_marginBottom="20dp"
            android:gravity="right"/>

        <Button
            android:id="@+id/signin"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_marginBottom="20dp"
            android:textAllCaps="false"
            android:text="@string/sign_in"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:textColor="@color/button_text_color"
            android:background="@drawable/custom_button"/>

        <TextView
            android:id="@+id/lginAcc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:text="@string/don_t_have_an_accout_sign_up_here"
            android:textColor="@color/et_text_color"
            android:textStyle="bold" />
    </LinearLayout>

</ScrollView>

</LinearLayout>