<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/user_feed_secondary_color"
    tools:context=".screens.home.CreateNewFeedFragment">

    <ImageView
        android:id="@+id/user_post_back_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/side_margin_12"
        android:layout_marginTop="@dimen/side_margin_12"
        android:contentDescription="@string/back_button"
        android:src="@drawable/bx_arrow_back_svg" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/side_margin_14"
        android:layout_marginEnd="@dimen/side_margin_16"
        android:elevation="@dimen/card_elevation_20dp"
        android:padding="@dimen/padding_8dp"
        app:cardBackgroundColor="@color/user_feed_primary_color"
        app:cardCornerRadius="@dimen/card_radius_20dp"
        app:cardElevation="@dimen/card_elevation_20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/side_margin_25dp"
            android:layout_marginEnd="@dimen/side_margin_22dp"
            android:layout_marginBottom="@dimen/side_margin_20dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/side_margin_10"
                android:padding="@dimen/padding_8dp">

                <ImageView
                    android:id="@+id/user_post_user_profile_icon"
                    android:layout_width="@dimen/user_profile_image_size"
                    android:layout_height="@dimen/user_profile_image_size"
                    android:layout_marginTop="@dimen/side_margin_8dp"
                    android:layout_marginEnd="@dimen/side_margin_8dp"
                    android:layout_marginBottom="@dimen/side_margin_8dp"
                    android:background="@drawable/user_icon_view"
                    android:contentDescription="@string/user_profile_picture" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/side_margin_10"
                    android:layout_marginTop="@dimen/side_margin_8dp"
                    android:layout_toEndOf="@+id/user_post_user_profile_icon"
                    android:background="@drawable/user_feed_caption_outline">

                    <EditText
                        android:id="@+id/user_post_captions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/transparent"
                        android:gravity="start"
                        android:hint="@string/captions"
                        android:inputType="textCapSentences|textMultiLine"
                        android:padding="@dimen/padding_8dp"
                        android:singleLine="true" />

                </FrameLayout>

            </RelativeLayout>


            <ImageView
                android:id="@+id/user_post_image_upload"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="@dimen/side_margin_8dp"
                android:layout_marginBottom="@dimen/side_margin_8dp"
                android:background="@drawable/user_post_image_outline"
                android:contentDescription="@string/add_picture_placeholder"
                android:src="@drawable/ic_add" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_user_post_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="@dimen/side_margin_25dp"
        android:layout_marginBottom="@dimen/side_margin_25dp"
        android:clickable="true"
        android:contentDescription="@string/post_user_feed_button"
        android:elevation="@dimen/card_elevation_20dp"
        android:focusable="true"
        app:backgroundTint="@color/user_feed_primary_color"
        app:srcCompat="@drawable/user_feed_send_icon" />

</RelativeLayout>