<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_color"
    tools:context=".screens.account.SignupActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/ic_frame_81" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_group_37" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingStart="@dimen/layout_padding_left"
            android:paddingEnd="@dimen/layout_padding_right"
            android:orientation="vertical">


            <EditText
                android:id="@+id/etEmail"
                android:layout_width="@dimen/EditText_Width"
                android:layout_height="@dimen/EditText_Height"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:hint="@string/enter_your_email"
                android:inputType="textEmailAddress"
                android:paddingStart="@dimen/et_padding_left"
                android:paddingTop="@dimen/et_padding_top"
                android:paddingEnd="@dimen/et_padding_right"
                android:paddingBottom="@dimen/et_padding_bottom"
                android:layout_gravity="center"
                android:textColor="@color/et_text_color"
                android:textAlignment="center"
                android:textSize="20sp"
                android:background="@drawable/custom_text"/>


            <EditText
                android:id="@+id/etPassword"
                android:layout_width="@dimen/EditText_Width"
                android:layout_height="@dimen/EditText_Height"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                android:paddingStart="@dimen/et_padding_left"
                android:paddingTop="@dimen/et_padding_top"
                android:paddingEnd="@dimen/et_padding_right"
                android:paddingBottom="@dimen/et_padding_bottom"
                android:layout_gravity="center"
                android:textColor="@color/et_text_color"
                android:textAlignment="center"
                android:textSize="20sp"
                android:background="@drawable/custom_text"/>

            <EditText
                android:id="@+id/etReEnterPassword"
                android:layout_width="@dimen/EditText_Width"
                android:layout_height="@dimen/EditText_Height"
                android:layout_marginBottom="30dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/re_enter_your_password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:paddingStart="@dimen/et_padding_left"
                android:paddingTop="@dimen/et_padding_top"
                android:paddingEnd="@dimen/et_padding_right"
                android:paddingBottom="@dimen/et_padding_bottom"
                android:layout_gravity="center"
                android:textColor="@color/et_text_color"
                android:textAlignment="center"
                android:textSize="20sp"
                android:background="@drawable/custom_text"/>


            <Button
                android:id="@+id/signup"
                android:layout_width="@dimen/Button_width"
                android:layout_height="@dimen/Button_Height"
                android:gravity="center"
                android:textAllCaps="false"
                android:text="@string/sign_up"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:background="@drawable/custom_button"/>
        </LinearLayout>

    </ScrollView>

</LinearLayout>